SQuirreL SQL Client Change Log
==============================

Not yet released - available from CVS or in the latest snapshot:
----------------------------------------------------------------

Enhancements:

New Plugin (Hibernate)
   - allows to generate SQL statements from Hibernate HQL statements
   - shows object tree of mapped objects
   - HQL Code completion and syntax highlighting
   - Default way to create a HibernateSessionFactory using "new Configuration().configure().buildSessionFactory();"
   - User defined way to create a HibernateSessionFactory by calling a user defined provider method.
   See help for further details.


Added basic drag-n-drop to transfer a file from the desktop into an SQL Editor 
panel.

Code Completion Plugin:
  When Ctrl+Space is hit while completion popup is already open the prefix up to
  where all completion candidates match will be written to the SQL editor. The 
  completion popup will remain open.

New Plugin (SQL Parametrisation - Thorsten Mürell) allows you to put variables 
           into your SQL statements.
           
New Plugin (Data import - Thorsten Mürell) allows you to import arbitrary files
           into the database.

DB2Plugin: 
 - Added support for OS/400 (trigger source and details not yet implemented). 
   Special thanks goes to Tilmann Brenk for submitting OS/400 versions of all SQL 
   statements required to support the plugin features.
 - Added support for showing user-defined functions in the object tree and the 
   source code that is associated with them if it is available.
 - Exceptions from DB2 Universal JDBC driver are now interpreted as 
   DB2Diagnoseable exceptions so that the cause of the exception can be printed 
   (Thanks to Christoph Schmitz).
 - When the source tab of a C-language stored procedure is selected, we now 
   show the user a nice informative message stating that the source code is 
   unavailable instead of merely displaying the word "null".
		   